<resources>
    <string name="app_name">TransportCollectifs</string>
    <string name="depart">My departures</string>
    <string name="recherche">to research</string>
    <string name="Annonce">Announce</string>
    <string name="Jours">The day of departure</string>
    <string name="Arriver">City of arrival</string>
    <string name="Depart">Ville de départ</string>
    <string name="Trajet">Annoncer un trajet</string>
    <string name="place">Nombre de place</string>
    <string name="reserver">Réserver</string>
    <string name="annonce">Annoncer</string>
    <string name="r_server_un_trajet">Réserver un trajet</string>
    <string name="ville_de_d_part">Ville de départ</string>
    <string name="ville_d_arriver">Ville d\'arriver</string>
    <string name="le_jour_de_depart">Le jour de depart</string>
    <string name="place_disponible">Place disponible</string>
    <string name="r_server">Réserver</string>
    <string name="panier">Panier</string>
    <string name="annonce_un_depart">Annonce</string>
    <string name="profil">Profil</string>
    <string name="r_cherche">Récherche</string>
    <string name="accueil">Accueil</string>
    <string name="accueil1">Accueil</string>
    <string name="recherche1">Recherche</string>
    <string name="annonce_un_d_part1">Annonce un départ</string>
    <string name="panier1">Panier</string>
    <string name="profil1">Profil</string>
    <string name="r_chercher">Réchercher</string>
    <string name="bienvenue_sur_l_accueil">Bienvenue sur l\'Accueil</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="annoncer_un_trajet">Annoncer un trajet</string>
    <string name="ville_de_d_part1">Ville de départ</string>
    <string name="ville_d_arriver1">Ville d\'arriver</string>
    <string name="nombre_de_place">Nombre de place</string>
    <string name="prix">Prix</string>
    <string name="le_jours_ex_2025_01_01">le jours ex: 2025/01/01</string>
    <string name="annoncer">Annoncer</string>
    <string name="annoncer1">Annoncer</string>
    <string name="le_jours_ex_2025_01_011">le jours ex: 2025/01/01</string>
    <string name="prix1">Prix</string>
    <string name="nombre_de_place1">Nombre de place</string>
    <string name="ville_d_arriver11">Ville d\'arriver</string>
    <string name="ville_de_d_part11">Ville de départ</string>
    <string name="annoncer_un_trajet1">Annoncer un trajet</string>
    <string name="le_jours_ex_2025_01_0111">le jours ex: 2025_01_01</string>
    <string name="r_chercher_un_trajet">Réchercher un trajet</string>
    <string name="r_cherche1">Récherche</string>
    <string name="ville_de_d_part14">Ville de départ</string>
    <string name="recherche15">Recherche</string>
    <string name="bienvenu_sur_votre_appli_mobile">Bienvenu sur votre Appli-Mobile</string>
    <string name="historique">Historique</string>
    <string name="parametre">Parametre</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="save_button">Sauve</string>
    <string name="language_selection">Sélect language</string>
    <string name="language_french">French</string>
    <string name="language_english">English</string>
    <string name="date_ex_01_01_2024">Date Ex: 01/01/2024</string>
    <string name="nombre_de_place12">Nombre de place</string>
    <string name="prix12">Prix</string>
    <string name="nom">Nom</string>
    <string name="email1">Email</string>
    <string name="mot_de_passe1">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="votre_panier">Votre Panier</string>
    <string name="changer_la_photo_de_profil">Changer la photo de profil</string>
    <string name="changer_la_langue">Changer la langue</string>
    <string name="nom1">Nom</string>
    <string name="email11">Email</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="date_ex_01_01_2024Q">Date ex:01/01/2024</string>
    <string name="rechercheQ">Recherche</string>
    <string name="date_ex_01_01_2024A">Date ex:01/01/2024</string>
    <string name="rechercheQA">Recherche</string>
    <string name="r_sultat_de_la_recherche">Résultat de la recherche</string>
    <string name="historique_des_trajets">Historique des trajets</string>
    <string name="pr_nom">Prénom</string>
    <string name="accueil_de_connexion">Accueil de Connexion</string>
    <string name="d_part_id">Départ : ID</string>
    <string name="arriv_e_id">Arrivée : ID</string>
    <string name="date_xx_xx_xxxx">Date : XX-XX-XXXX</string>
    <string name="places_disponibles_0">Places disponibles : 0</string>
    <string name="prix_0_0">Prix : 0.0 €</string>
    <string name="moins">-</string>
    <string name="Plus">+</string>
    <string name="zero">0</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="trip_id">Trip ID</string>
    <string name="user_id">User ID</string>
    <string name="seats">Seats</string>
    <string name="total_price">Total Price</string>
    <string name="pr_nom1">Prénom</string>
    <string name="noms">Nom</string>
    <string name="emails">Email</string>
    <string name="enregistrers">Enregistrer</string>
    <string name="d_connexions">Déconnexion</string>
    <string name="changer_le_th_me">Changer le thème</string>
    <string name="supprimer_le_compte">Supprimer le compte</string>
    <string name="prenom">Prenom</string>
    <string name="choisi_sexe">Choisi Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="supprimer_les_trajets_s_lectionn_s">Supprimer les trajets sélectionnés</string>
    <string name="payer_le_trajet_s_lectionn">Payer le trajet sélectionné</string>
</resources>