<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Informations sur le trajet -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_part_id"/>

        <TextView
            android:id="@+id/tvTripId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arriv_e_id"/>

        <TextView
            android:id="@+id/tvDepartureDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_xx_xx_xxxx"/>

        <TextView
            android:id="@+id/tvSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_disponibles_0"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_0_0"/>
    </LinearLayout>

    <!-- Gestion des sièges -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/moins"/>

            <TextView
                android:id="@+id/tvSelectedSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/Plus"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnenregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/enregistrer"/>
    </LinearLayout>
</LinearLayout>
