<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_chercher_un_trajet"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <!-- Ville de départ -->
    <EditText
        android:id="@+id/etDepartureCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ville_de_d_part14"/>

    <!-- Ville d'arrivée -->
    <EditText
        android:id="@+id/etArrivalCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ville_d_arriver"/>

    <!-- Date -->
    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_ex_01_01_2024A"
        android:inputType="date"/>


    <!-- Bouton pour lancer la recherche -->
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rechercheQA"/>
</LinearLayout>
