<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/logo2"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnChangePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_la_photo_de_profil"/>

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_la_langue"
        android:layout_marginTop="16dp"/>

    <!-- Nouveau bouton pour changer le thème -->
    <Button
        android:id="@+id/btnChangeTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_le_th_me"
        android:layout_marginTop="16dp"/>

    <!-- Nouveau bouton pour supprimer l'utilisateur -->
    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer_le_compte"
        android:layout_marginTop="16dp"/>

</LinearLayout>
