<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="?attr/actionModeBackground">

    <CheckBox
        android:id="@+id/checkboxDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTripId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_id"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seats"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="14sp"/>

    </LinearLayout>
</LinearLayout>
