<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/historique_des_trajets"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistorique"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/btnDeleteSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer_les_trajets_s_lectionn_s"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnPaySelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payer_le_trajet_s_lectionn"
        android:visibility="gone"/>
</LinearLayout>
