<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/bienvenue_sur_l_accueil"
    android:textSize="25sp"
    android:textColor="#00BCD4"
    android:textStyle="bold"
    android:fontFamily="casual"/>

<ImageView
    android:layout_width="match_parent"
    android:layout_height="630dp"
    android:scaleType="centerCrop"
    android:src="@drawable/logo1"/>

<LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <Button
        android:id="@+id/buttonCons"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/connexion"
        android:textStyle="bold">
    </Button>

    <Button
        android:id="@+id/buttonIns"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:text="@string/inscription"
        android:textStyle="bold">
    </Button>

</LinearLayout>

</LinearLayout>
